z-index fix

--- a/quickModal.css
+++ b/quickModal.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 90010
+  z-index: 9000;
   opacity: 0;
   transition: all .5s;
 }
